--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Brandon Johnson</h1>
-      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
+      <h1>Shivani Bhalerao</h1>
+      <p>I'm <span class="typed" data-typed-items="Designer, Developer"></span></p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <!--<a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
+        <a href="https://www.facebook.com/profile.php?id=100009229851310" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/shivani__bhalerao/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <!--<a href="#" class="google-Fplus"><i class="bx bxl-skype"></i></a>--> 
+        <a href="https://www.linkedin.com/in/shivani-bhalerao-059b5a13a" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -247,42 +247,54 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
-              <h4>Brandon Johnson</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <h4>Shivani Bhalerao</h4>
+              <p><em>An Engineer by Qualification, a Problem Solver by Mind and a Tech Enthusiast by Heart</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <!--<li>Portland par 127,Orlando, FL</li>
+                <li>(123) 456-7891</li>-->
+                <li>bhaleraoshivani14@gmail.com</li>
               </ul>
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>Master of Science in Computer Science</h4>
+              <h5>Sept 2021 - Present</h5>
+              <p><em>Northeastern University, San Jose, CA</em></p>
+              <p>Related courses: Program Design Paradigm, Database Management Systems
+
+              </p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
-            </div>
+              <h4>Bachelor of Engineering in Information Technology</h4>
+              <h5>2015 - 2019</h5>
+              <p><em>University of Mumbai, India</em></p>
+              <p>Related courses: Object-Oriented Programming, Data structures and Algorithms, Intelligent Systems, Soft Computing</p>
+              <p>GPA: 8.15 on the scale of 10</p>
+              <p>Major Project:
+                Supply Chain Management using Blockchain
+                <p><i>IPFS, Docker, Hyperledger Fabric, Hyperledger Composer</i></p>
+                <ul>
+                <li>	Tracked the data in the supply chain using blockchain technology from the producer to industries to shipper to consumer securely and immutably in order to minimize the frauds. Transparency and security were the key aspects of this project. </li>
+                <li> Developed a research paper which was published in IEEE-2019 International Conference on Intelligent Sustainable Systems.</li>
+                </ul>
+                </p>           </div>
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
-              <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
-              </ul>
-            </div>
+              <h4>Bachelor of Engineering in Information Technology</h4>
+              <h5>2015 - 2019</h5>
+              <p><em>University of Mumbai, India</em></p>
+              <p>Related courses: Object-Oriented Programming, Data structures and Algorithms, Intelligent Systems, Soft Computing</p>
+              <p>Major Project:
+                Supply Chain Management using Blockchain
+                <p><i>IPFS, Docker, Hyperledger Fabric, Hyperledger Composer</i></p>
+                <ul>
+                <li>	Tracked the data in the supply chain using blockchain technology from the producer to industries to shipper to consumer securely and immutably in order to minimize the frauds. Transparency and security were the key aspects of this project. </li>
+                <li> Developed a research paper which was published in IEEE-2019 International Conference on Intelligent Sustainable Systems.</li>
+                </ul>
+                </p>           </div>
             <div class="resume-item">
               <h4>Graphic design specialist</h4>
               <h5>2017 - 2018</h5>
