--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Shivani Bhalerao</h1>
-      <p>I'm a <span class="typed" data-typed-items="Tech Enthusiast, Developer, "></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Tech Enthusiast, Software Engineer"></span></p>
       <div class="social-links">
         <a href="mailto:bhalerao.s@northeastern.edu" class="email" target="blank"><i class="icofont-envelope"></i></a> 
         <a href="https://github.com/ShivaniBhalerao" class="github" target="blank"><i class="bx bxl-github"></i></a>
