--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <p class="font-italic">
               Skilled in JAVA, Angular, PL/SQL, Data Analysis using Machine Learning, Spring, IBM Watson.
             </p>
-            <p>Currently, I am an MS CS candidate at Northeastern University. My courses for semester 1 are programming design paradigms and database management system.</p>
+            <p>Currently, I am an MS CS candidate at Northeastern University with a GPA of 4.00/4.00. My courses include programming design paradigms, database management system, algorithms and foundations of artificial intelligence.</p>
 
             <p>
               I have completed my Bachelor of Engineering in Information Technology from Univeristy of Mumbai with GPA of 8.15/10. Further, I have 2+ years of experience at Tata Consultancy Services where I have worked on various technologies like Angular, Java Spring, SQL.
@@ -142,8 +142,9 @@
               <h4>Master of Science in Computer Science</h4>
               <h5>Sept 2021 - Present</h5>
               <p><em>Northeastern University, San Jose, CA</em></p>
-              <p>Related courses: Programming Design Paradigm, Database Management Systems
-
+              <p>Related courses: Programming Design Paradigm, Database Management Systems, Algorithms, Foundations of Artificial Intelligence.
+              <p>I am also a teaching assistant and tutor for CS5008: Data Structures and Algorithms.</p>
+              <p>GPA: 4.00 on the scale of 4.00</p>
               </p>
             </div>
             <div class="resume-item">
