--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
             <img src="assets/img/shivani.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>MS CS candidate at Northeastern University / Software Engineering Intern at Meta</h3>
+            <h3>MS CS candidate at Northeastern University / Ex-Software Engineering Intern at Meta</h3>
             <p class="font-italic">
               Skilled in JAVA, Angular, PL/SQL, React, GraphQl, Mercurial, Data Analysis using Machine Learning, Spring, IBM Watson.
             </p>
-            <p>Currently, I am a Software Engineering Intern at Meta for Summer 2022. I am pursuing my MS in CS at Northeastern University with a GPA of 4.00/4.00. My courses include programming design paradigms, database management system, algorithms and, foundations of artificial intelligence.</p>
+            <p>Currently, I am pursuing my MS in CS at Northeastern University with a GPA of 4.00/4.00. My courses include programming design paradigms, database management system, algorithms, foundations of artificial intelligence, information retrieval, and mobile application development.</p>
 
             <p>
-              I have completed my Bachelor of Engineering in Information Technology from Univeristy of Mumbai with GPA of 8.15/10. Further, I have 2+ years of experience at Tata Consultancy Services where I have worked on various technologies like Angular, Java Spring, SQL.
+              I have completed my Bachelor of Engineering in Information Technology from Univeristy of Mumbai with GPA of 8.15/10. Further, I have 2+ years of experience at Tata Consultancy Services where I have worked on various technologies like AngularJS, Java Spring, SQL. In Summer of 2022, I completed my Software Engineering internship at Meta in the Meta Business Suite: Business Permissions team, where I had an opportunity to work on wide number of technologies like React, React Native, Mercurial, Hack, GraphQL.
             </p>
             <div class="row">
               <!-- <div class="col-lg-6"> -->
@@ -142,8 +142,10 @@
               <h4>Master of Science in Computer Science</h4>
               <h5>Sept 2021 - Present</h5>
               <p><em>Northeastern University, San Jose, CA, USA</em></p>
-              <p>Related courses: Programming Design Paradigm, Database Management Systems, Algorithms, Foundations of Artificial Intelligence.
-              <p>Also, I was a teaching assistant and tutor for CS5008: Data Structures and Algorithms during Spring 2022 semester.</p>
+              <p>Related courses: Programming Design Paradigm, Database Management Systems, Algorithms, Foundations of Artificial Intelligence, Information Retrieval, Mobile Application Development.
+              <p>Teaching Assistant and tutor for CS5008: Data Structures and Algorithms in Spring 2022 semester.</p>
+              <p>Teaching Assistant for CS5200: Database Management Systems in Fall 2022 semester.</p>
+
               <p>GPA: 4.00 on the scale of 4.00</p>
               </p>
             </div>
@@ -166,14 +168,18 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Software Engineering Intern at Meta</h4>
-              <h5>May 2022 - Present</h5>
+              <h5>May 2022 - Aug 2022</h5>
               <p><em>Meta, Menlo Park, CA, USA</em></p>
               
               <p>Project:
-                Meta Business Suite
-                <p><i>React, Relay, GraphQl, Hack, Mercurial</i></p>
+                Meta Business Suite: Business Permissions
+                <p><i>React, React Native, Relay, GraphQl, Hack, Mercurial</i></p>
                 <ul>
-                <li> Working on a full stack project on Meta Business Suite: Business Permissions team during my summer 2022 internship.</li>
+                <li> Worked as a part of the Meta Business Suite: Business Permissions team.</li>
+                <li> Added a feature for business admins to manage non-business admin permissions on web app as well as mobile app, and ensured a 100% coverage of the test cases in integration and E2E
+                  test.</li>
+                <li> Brought restricted permission management experience for business employees with partial access on the mobile app.</li>
+                <li> Organized dogfooding sessions for the team members and presented a demo to the entire Meta Business Suite unit.</li>
               </ul></p>           </div>
             
             <div class="resume-item">
